--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@databiosphere/bard-client",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1",
   "main": "src/client.js",
   "license": "MIT",
   "scripts": {
